fix icon wrap in opened pricing cards

--- a/src/components/pricing/component/openedPreview/opened.less
+++ b/src/components/pricing/component/openedPreview/opened.less
@@ -52,7 +52,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 5.75rem;
+	min-width: 5.75rem;
 	height: 5.75rem;
 	border-radius: 50%;
 	border: solid 1px var(--highlight-color);
